Fixed GitLab URL

--- a/source/views/start.jade
+++ b/source/views/start.jade
@@ -43,7 +43,7 @@ script(type='text/ng-template', id='start')
     .form-groupcheckbox.col-xs-12.col-sm-4.col-sm-offset-4
         input(type='checkbox', ng-model='application.access.gitlab', style='margin-right:10px;')
         label
-          a(href='https://gitlab.keeleressursid.ee', target='_blank') GitLab
+          a(href='https://gitlab.keeleressursid.ee/explore/projects', target='_blank') GitLab
 
     .form-groupcheckbox.col-xs-12.col-sm-4.col-sm-offset-4
         input(type='checkbox', ng-model='application.access.hosting', style='margin-right:10px;')
