--- a/source/stylesheets/style.styl
+++ b/source/stylesheets/style.styl
@@ -41,6 +41,10 @@ a
         color c_orange
         text-decoration none
 
+small
+    font-size 13px
+    line-height 13px
+
 .file
 
     &:hover
