--- a/source/views/start.jade
+++ b/source/views/start.jade
@@ -29,6 +29,7 @@ script(type='text/ng-template', id='start')
     .form-group.col-xs-12.col-sm-4.col-sm-offset-4
       label.control-label(for='email') E-post
       input.form-control(id='email', type='email', ng-model='application.email')
+      small * Kõigile eelpool märgitud teenustele luuakse kasutajaõigused selle e-posti kaudu. Kui soovite mõnda märgitud teenustest kasutada teise e-posti kaudu, täitke selleks palun uus taotlus.
 
     .form-group.col-xs-12.col-sm-4.col-sm-offset-4
       label.control-label(for='company') Asutus
