Replace GA with Plausible

--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -7,14 +7,14 @@ html(ng-app='ekrkApp')
     base(href='/')
 
     meta(charset='utf-8')
-    meta(name='viewport', content='initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width, minimal-ui')
-    meta(name='apple-mobile-web-app-capable', content='yes')
-    meta(name='apple-mobile-web-app-status-bar-style', content='black')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
 
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:300,600')
 
     style @@include('stylesheet.css')
 
+    script(src='https://plausible.io/js/plausible.js', defer='', data-domain='kasutajataotlus.keeleressursid.ee')
+    script(src='/assets/js/crypto-js.min.js')
     script @@include('javascript.js')
 
   body
@@ -27,3 +27,4 @@ html(ng-app='ekrkApp')
         div(ng-view, autoscroll='true')
 
     include start
+
