Use Github actions for build

--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -14,7 +14,7 @@ html(ng-app='ekrkApp')
     style @@include('stylesheet.css')
 
     script(src='https://plausible.io/js/plausible.js', defer='', data-domain='kasutajataotlus.keeleressursid.ee')
-    script(src='/assets/js/crypto-js.min.js')
+    script(src='/crypto-js.min.js')
     script @@include('javascript.js')
 
   body
